# ros2_jazzy_simulation_ws

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
src/cube_motion/: CMakeLists.txt  package.xml
src/cube_motion/action/: HandOver.action  RotateFace.action
src/cube_motion/cube_motion/: cube_motion_server.py
src/cube_motion/launch/: cube_motion_server.launch.py
src/cube_perception/: CMakeLists.txt  package.xml
src/cube_perception/cube_perception/: scan_cube_action_server.py
src/cube_perception/launch/: cube_perception.launch.py
src/cube_solver/: CMakeLists.txt  package.xml
src/cube_solver/action/: SolveCube.action
src/cube_solver/cube_solver/: cube_solver_node.py  solve_cube_action_server.py
src/cube_solver/launch/: cube_solver.launch.py
src/dual_ur_simulation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/dual_ur_simulation/config/: controllers.yaml
src/dual_ur_simulation/launch/: dual_ur3e_sim_control.launch.py  sim.launch.py
src/dual_ur_simulation/rviz/: dual_ur.rviz
src/dual_ur_simulation/urdf/: ur.urdf.xacro  ur_ros2_control.xacro
src/ur_calibration_tool/: package.xml  setup.cfg  setup.py
src/ur_move_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ur_move_controller/action/: MoveRobot.action
src/ur_move_controller/launch/: move_controller.launch.py
src/ur_move_controller/ur_move_controller/: action_server.py  test_client.py
