<?xml version="1.0"?>
<package format="3">
  <name>ur_move_controller</name>
  <version>1.0.0</version>
  <description>UR MoveIt2 controller</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>moveit_py</depend>
  <depend>geometry_msgs</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>